# spider

./: .editorconfig  README.md  meson.build
data/: gresource.xml
data/references/: css-ref.html  js-ref.html
data/templates/: index.html  index.js
src/: GeneratorSettings.vala  generator.vala  main.vala  meson.build
